--- a/App/src/index.css
+++ b/App/src/index.css
@@ -1,7 +1,3 @@
-:root {
-
-}
-
 *{
     font-family: Arial, serif;
     box-sizing: border-box;
@@ -10,22 +6,60 @@
 }
 
 select{
+    width: 20%;
+    outline: none;
+    font-size: 25px;
+    background: white;
+    height: 80%;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+header{
+    height: 100%;
+    padding: 1.2rem 70px;
+    background: lightpink;
+    display: block;
+    align-items: center;
+}
+
+input{
     min-width: 30%;
     outline: none;
     font-size: 25px;
     background: white;
     height: 80%;
     border-radius: 5px;
+    border: 1px solid black;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    cursor: auto;
 }
 
-header{
-    height: 75px;
-    padding: 0 70px;
-    background: lightpink;
+label{
     display: flex;
     align-items: center;
-    flex-direction: row;
-    gap: 30px;
+}
+
+label > span{
+    text-wrap: nowrap;
+}
+
+.filter{
+    margin-top: 10px;
+}
+
+.filter-price{
+    display: inline-block;
+    width: auto;
+    text-align: center;
+    padding-right: 3rem;
+}
+
+.filter-count{
+    display: inline-block;
+    width: auto;
+    text-align: center;
 }
 
 .catalog{
